2025-12-13 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.2.0-alpha
	* Updated RomOpener.java.
		* RomOpener.java has been renamed to PacRomOpener.java.
		* This object is now an interface instead of a class.
		* Removed methods that relate to the PacRomSet class.
	* Added PacRomSetOpener.java.
		* Code from PacRomOpener.java were transferred there.

2025-12-12 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.1.0-alpha
	* Added RomOpener.java.
		* This class contains helper methods for opening PacRoms and PacRomSets.
		* Those helper methods can use Path, URI, or String objects as the arguments.
		* It can also help create an ArrayList of PacRoms for the PacRomSet.
	* Removed Openable.java.
	* Added Closable.java as a replacement for Openable.java.
		* It only contains an abstract close method.
	* Updated PacFile.java.
		* Removed the other constructors, only leaving with one.
	* Updated PacRom.java.
		* The main constructor is now set to default instead of public to make up for the RomOpener.
		* Like PacFile.java, the other constructors were removed.
		* PacRom no longer implements Openable.
		* Instead, PacRom implements the newly added Closable interface.
		* The close method now clears its data array with zeroes.
	* Updated PacRomSet.java.
		* Changes from PacRom.java were applied as well.
		* For the close method, it now closes the PacRoms in the PacRomSet.
		* The roms variable is now private.
		* To make up for that, getRoms() was added.
	* Updated ResourceGetter.java.
		* ResourceGetter now has two methods: One for getting the URI of the test ROM set, and the other being the PacRom of it.
	* Updated TestPacRom.java.
		* The test methods are now shortened due to the new helper methods.
	* Updated TestPacRomSet.java.
		* Changes from TestPacRom.java were also applied as well.
		* testGetPath() now prints the path.

2025-12-11 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.0.1-alpha